don't call ant from setup-env.